MDEV-19356 Assertion 'space->free_limit == 0 || space->free_limit == free_limit'

fil_node_t::read_page0(): Do not replace up-to-date metadata with a
possibly old version of page 0 that is being reread from the file.
A more up-to-date page 0 could still exists in the buffer pool,
waiting to be written back to the file.